--- a/uwi/uwi.conf
+++ b/uwi/uwi.conf
@@ -1,7 +1,7 @@
 README='This configuration file will be used by BASH and Javascript file.';
 README='Please make sure to use syntax that supported by both languages.';
 
-host='10.0.0.60';
+host='max.local';
 port=8000;
 web_socket_url='ws://'+host+':'+port+'/';
 response_timeout=5000;
